--- a/src/blocks/popup-image.css
+++ b/src/blocks/popup-image.css
@@ -12,8 +12,7 @@
   height: auto;
   background-color: transparent;
   padding: 0;
-  margin: auto;
-  position: relative;
+  margin-top: 70%;
 }
 
 .popup__image {
@@ -29,17 +28,37 @@
   color: #fff;
 }
 
-@media screen and (max-width: 683px) {
-  .popup__image-button {
-    top: -30px;
-    right: -25px;
-    width: 30px;
-    height: 30px;
+.popup__close-button_image {
+  top: 54%;
+  left: 68%;
+}
+
+@media only screen and (max-width: 1000px) {
+  .popup-zoom-image__container {
+    margin-top: 480px;
+    position: relative;
   }
 
-  .popup__container {
-    top: 236px;
-    max-width: 282px;
-    max-height: 322px;
+  .popup__close-button_image {
+    top: -38px;
+    left: 445px;
+  }
+}
+
+@media screen and (max-width: 683px) {
+  .popup-zoom-image__container {
+    margin-top: 500px;
+  }
+
+  .popup__image {
+    display: flex;
+  }
+
+  .popup__image-button {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    top: -40px;
+    left: 63px;
   }
 }
