--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -1,13 +1,13 @@
 .popup {
   position: fixed;
-  top: 50%;
+  top: 17%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 100em;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -79,8 +79,8 @@
 
 .popup__close-button {
   position: absolute;
-  top: -40px;
-  right: -40px;
+  top: -30px;
+  right: -20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,13 +114,13 @@
   .popup__container {
     width: 238px;
     padding: 22px;
-    margin-top: 27px;
+    margin-top: 627px;
     position: absolute;
   }
 
   .popup__close-button {
-    top: -46px;
-    right: 10px;
+    top: -20px;
+    right: -5px;
     width: 26px;
     height: 26px;
   }
